--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
                         
                         // Redirect after animation completes
                         setTimeout(() => {
-                            window.location.href = '/website.html';
+                            window.location.href = '/bang-luong/index.html';
                         }, 500);
                     }
                 }, intervalDuration);
