--- a/bang-luong/index.html
+++ b/bang-luong/index.html
@@ -337,7 +337,7 @@
 
   async function fetchSalaryData() {
     try {
-      const res = await fetch('../data/meiu.json');
+      const res = await fetch('../data/data.json');
       salaryData = await res.json();
       const defaultDate = dateSelect.value;
       renderSalaryTable(salaryData[defaultDate] || []);
