--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
       <h1>SPAM TIK TOK </h1>
       <p>Chào mừng bạn đến với hệ thống quản lý và thanh toán của nhóm SPAM TIK TOK. Theo dõi hiệu suất làm việc và thu nhập của bạn một cách minh bạch và chính xác.</p>
       <div>
-        <a href="bang-luong.html" class="btn">Xem bảng lương</a>
+        <a href="../bang-luong/index.html" class="btn">Xem bảng lương</a>
         <a href="#" class="btn btn-outline">Tham gia ngay</a>
       </div>
     </div>
