--- a/bang-luong/index.html
+++ b/bang-luong/index.html
@@ -290,7 +290,7 @@
 </div>
 
 <footer>
-  <div© 2025 Copyright By Từ Quang Nam. All rights reserved.</div>
+  <div>© 2025 Copyright By Từ Quang Nam. All rights reserved.</div>
   <div class="social-links">
     <a href="#"><i class="fab fa-facebook"></i></a>
     <a href="https://t.me/the_king19_04"><i class="fab fa-telegram"></i></a>
