--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="vi">
 <head>
@@ -339,10 +340,10 @@
       </button>
       <nav class="main-nav" id="mainNav">
         <a href="#">Trang chủ</a>
-        <a href="#">Nội Quy</a>
+        <a href="../noi-quy/index.html">Nội Quy</a>
         <a href="../bang-luong/index.html">Bảng lương</a>
-        <a href="#">Thành viên</a>
-        <a href="#">Hướng dẫn</a>
+        <a href="../Danh-Sach-Thanh-Vien/">Thành viên</a>
+        <a href="../huong-dan/">Hướng dẫn</a>
 
 
       </nav>
