--- a/bang-luong/index.html
+++ b/bang-luong/index.html
@@ -268,7 +268,9 @@
     <label for="date-select">Chọn ngày:</label>
     <select id="date-select">
       <option value="01/08/2025" >01/08/2025</option>
-      <option value="03/08/2025" selected>03/08/2025</option>
+      <option value="02/08/2025" >02/08/2025</option>
+      <option value="03/08/2025" >03/08/2025</option>
+      <option value="04/08/2025" selected>04/08/2025</option>
     </select>
 
   </div>
