--- a/bang-luong/index.html
+++ b/bang-luong/index.html
@@ -270,7 +270,10 @@
       <option value="01/08/2025" >01/08/2025</option>
       <option value="02/08/2025" >02/08/2025</option>
       <option value="03/08/2025" >03/08/2025</option>
-      <option value="04/08/2025" selected>04/08/2025</option>
+      <option value="04/08/2025" >04/08/2025</option>
+      <option value="05/08/2025" selected>05/08/2025</option>
+      <option value="06/08/2025" >06/08/2025</option>
+      <option value="07/08/2025" >07/08/2025</option>
     </select>
 
   </div>
